--- a/package.json
+++ b/package.json
@@ -9,17 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.1",
+    "@langchain/openai": "^0.0.28",
+    "@prisma/client": "^5.10.2",
     "@types/node": "20.11.22",
     "@types/react": "18.2.60",
     "@types/react-dom": "18.2.19",
     "autoprefixer": "10.4.17",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.0",
+    "langchain": "^0.1.30",
     "next": "14.1.0",
+    "nextjs": "^0.0.3",
     "postcss": "8.4.35",
     "react": "18.2.0",
+    "react-autosave": "^0.4.4",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.4.1",
-    "typescript": "5.3.3"
+    "recharts": "^2.12.5",
+    "tailwindcss": "^3.4.3",
+    "typescript": "5.3.3",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "prisma": "^5.10.2"
   }
 }
